copied climate.html, renamed outreach, added pangaea puzzle section with figure

--- a/outreach.html
+++ b/outreach.html
@@ -26,20 +26,20 @@
         max-width: 1000px;
       }
       .container > hr {
-        margin: 60px 0;
+        margin: 20px 0;
       }
 
       /* Main marketing message and sign up button */
       .jumbotron {
-        margin: 80px 0;
+        margin: 40px 0;
         text-align: left;
       }
       .jumbotron h1 {
-        font-size: 60px;
+        font-size: 40px;
         line-height: 1;
       }
       .jumbotron .lead {
-        font-size: 24px;
+        font-size: 21px;
         line-height: 1.25;
       }
       .jumbotron .btn {
@@ -125,7 +125,7 @@
     ------------------------- */
 
     .featurette-divider {
-      margin: 80px 0; /* Space out the Bootstrap <hr> more */
+      margin: 20px 0; /* Space out the Bootstrap <hr> more */
     }
     .featurette {
       padding-top: 0px; /* Vertically center images part 1: add padding above and below text. */
@@ -145,7 +145,7 @@
 
     /* Thin out the marketing headings */
     .featurette-heading {
-      font-size: 50px;
+      font-size: 40px;
       font-weight: 300;
       line-height: 1;
       letter-spacing: -1px;
@@ -205,16 +205,63 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <p class="lead">Coming soon</p>
+	<h1>Earth science outreach activities</h1>
+        <p class="lead">I've tried these activities with many classes of middle school students, and they were all a big hit. </p>
       </div>
 
-        
+      <!-- START THE FEATURETTES -->
 
-<!--     <hr> -->
+      <hr class="featurette-divider"> 
+
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/outreach_puzzle.png">
+        <h2 class="featurette-heading">Pangaea puzzle</h2>
+        <p class="lead">The plates have moved around a lot since 250 million years ago when the supercontinent Pangaea started to break up. This puzzle includes all the major continental plates in the southern hemisphere. Using the shapes of the continents and evidence from land-dwelling fossils whose ranges cover multiple continents, students put together the pieces to recreate Pangaea. Puzzle materials can be found <a href="http://volcanoes.usgs.gov/about/edu/dynamicplanet/wegener/">here</a>. A great movie to show after the students finish, titled "Continental drift", can be found <a href="http://www.tectonics.caltech.edu/outreach/animations/index.html">here</a>.  </p>
+      </div>
+
+      <hr class="featurette-divider"> 
+
+<!--      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/methods.jpg">
+        <h2 class="featurette-heading">Methods</h2>
+        <p class="lead">Carbonate clumped isotope thermometry provides a temperature that is independent of the δ18O of the ocean. This means that carbonate clumped isotopes are a much more reliable proxy than the δ18O of carbonate. Temperature affects the thermodynamic equilibrium between carbonate ions with only one heavy isotope and carbonate ions with a "clump" of two heavy isotopes. This equilibrium is recorded by shelly animals living in the ocean, which can then be fossilized. To measure the clumped isotope composition of a fossil, I dissolved it in phosphoric acid to release carbon dioxide, and then measured the isotopes of this gas using a mass spectrometer. </p>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/samples.jpg">
+        <h2 class="featurette-heading">Samples</h2>
+        <p class="lead">433 million years ago, the global oceans underwent a severe perturbation. We know this because many animals went extinct, and the δ13C of marine carbonates shifted sharply, suggesting a large change in the availability of phytoplankton (an important part of the marine food chain). I used clumped isotopes to investigate whether this perturbation was caused by rapid climate change. I measured the clumped isotope composition of marine organisms that were living 433 million years ago at the edge of a tropical sea. The organisms were buried in the mud and fossilized, and then collected from cliffs on the island of Gotland, Sweden. </p>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/preservation.jpg">
+        <h2 class="featurette-heading">Sample preservation</h2>
+        <p class="lead">Clumped isotope results can often be difficult to interpret because the clumped isotope composition of a fossil can be reset if the fossil is dissolved and then recrystallized. To test for recrystallization of my samples, I used a scanning electron microscope to map the orientation of calcite crystals in the fossils. The linear features in the shell mapped in the upper part of the figure indicate original crystal structure, meaning this shell is very well preserved. The coral skeleton mapped in the lower part of the figure has a large light-blue area, indicated by the arrow, which has likely been recrystallized. These figures demonstrate that some fossils are well-preserved, while others are not. </p>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/results.jpg">
+        <h2 class="featurette-heading">Results</h2>
+        <p class="lead">Clumped isotope results confirmed that there is a large range in preservation quality among the samples. Hotter samples tend to have higher δ18O, suggesting that they were recrystallized deep underground, which erased the record of ocean temperature and instead recorded the temperature of hot hydrothermal fluids. The most pristine sample has a temperature of 30°C, similar to modern tropical oceans. Because so many samples were poorly preserved, I was not able to test for a change in temperature during the global marine ecosystem perturbation, so the cause of this phenomenon remains a mystery. </p>
+      </div>
+
+      <hr class="featurette-divider">
+-->
+      <!-- /END THE FEATURETTES -->
 
 
-
-
+      <!-- FOOTER -->
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p></p>
+      </footer>
+    
     </div><!-- /.container -->
 
 
