added fossil id section with picture

--- a/outreach.html
+++ b/outreach.html
@@ -221,15 +221,15 @@
 
       <hr class="featurette-divider"> 
 
-<!--      <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/methods.jpg">
-        <h2 class="featurette-heading">Methods</h2>
-        <p class="lead">Carbonate clumped isotope thermometry provides a temperature that is independent of the δ18O of the ocean. This means that carbonate clumped isotopes are a much more reliable proxy than the δ18O of carbonate. Temperature affects the thermodynamic equilibrium between carbonate ions with only one heavy isotope and carbonate ions with a "clump" of two heavy isotopes. This equilibrium is recorded by shelly animals living in the ocean, which can then be fossilized. To measure the clumped isotope composition of a fossil, I dissolved it in phosphoric acid to release carbon dioxide, and then measured the isotopes of this gas using a mass spectrometer. </p>
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/outreach_fossils.jpg">
+        <h2 class="featurette-heading">Fossil identification</h2>
+        <p class="lead">For this activity, I first have the students go through and try to name the organism in each of the pictures. I ask about important differences between similar organisms, like snails and ammonites or the two types of plants. Then I pass out boxes of numbered fossils, one fossil for each picture. The students get to pick up the fossils and look at them, and try to figure out which organism they represent. The students are always excited about getting to hold real fossils in their hands. </p>
       </div>
 
       <hr class="featurette-divider">
 
-      <div class="featurette">
+<!--      <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/samples.jpg">
         <h2 class="featurette-heading">Samples</h2>
         <p class="lead">433 million years ago, the global oceans underwent a severe perturbation. We know this because many animals went extinct, and the δ13C of marine carbonates shifted sharply, suggesting a large change in the availability of phytoplankton (an important part of the marine food chain). I used clumped isotopes to investigate whether this perturbation was caused by rapid climate change. I measured the clumped isotope composition of marine organisms that were living 433 million years ago at the edge of a tropical sea. The organisms were buried in the mud and fossilized, and then collected from cliffs on the island of Gotland, Sweden. </p>
