added relative dating section and figure

--- a/outreach.html
+++ b/outreach.html
@@ -229,30 +229,15 @@
 
       <hr class="featurette-divider">
 
-<!--      <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/samples.jpg">
-        <h2 class="featurette-heading">Samples</h2>
-        <p class="lead">433 million years ago, the global oceans underwent a severe perturbation. We know this because many animals went extinct, and the δ13C of marine carbonates shifted sharply, suggesting a large change in the availability of phytoplankton (an important part of the marine food chain). I used clumped isotopes to investigate whether this perturbation was caused by rapid climate change. I measured the clumped isotope composition of marine organisms that were living 433 million years ago at the edge of a tropical sea. The organisms were buried in the mud and fossilized, and then collected from cliffs on the island of Gotland, Sweden. </p>
-      </div>
-
-      <hr class="featurette-divider">
-
       <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/preservation.jpg">
-        <h2 class="featurette-heading">Sample preservation</h2>
-        <p class="lead">Clumped isotope results can often be difficult to interpret because the clumped isotope composition of a fossil can be reset if the fossil is dissolved and then recrystallized. To test for recrystallization of my samples, I used a scanning electron microscope to map the orientation of calcite crystals in the fossils. The linear features in the shell mapped in the upper part of the figure indicate original crystal structure, meaning this shell is very well preserved. The coral skeleton mapped in the lower part of the figure has a large light-blue area, indicated by the arrow, which has likely been recrystallized. These figures demonstrate that some fossils are well-preserved, while others are not. </p>
+        <img class="featurette-image pull-left" src="assets/img/outreach_dating.jpg">
+        <h2 class="featurette-heading">Relative dating</h2>
+        <p class="lead">Fossils are still widely used by geologists to date rocks relative to each other. I first show this diagram to the students, and explain that the horizontal lines represent the times when these different organisms were living. Then I ask for volunteers to hold pieces of paper that represent rocks. Each piece of paper has two fossils printed on it, and the volunteers stand at the front of the classroom holding the paper so the rest of the class can see it. Then the class works together to put the "rocks" in order from oldest to youngest. I include a few papers with fossils from overlapping times, so that the relative age of the "rocks" is ambiguous. This usually frustrates the students, because there is no right answer, but this ambiguity is often the case in real science, so it's an important lesson. </p>
       </div>
 
       <hr class="featurette-divider">
 
-      <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/results.jpg">
-        <h2 class="featurette-heading">Results</h2>
-        <p class="lead">Clumped isotope results confirmed that there is a large range in preservation quality among the samples. Hotter samples tend to have higher δ18O, suggesting that they were recrystallized deep underground, which erased the record of ocean temperature and instead recorded the temperature of hot hydrothermal fluids. The most pristine sample has a temperature of 30°C, similar to modern tropical oceans. Because so many samples were poorly preserved, I was not able to test for a change in temperature during the global marine ecosystem perturbation, so the cause of this phenomenon remains a mystery. </p>
-      </div>
 
-      <hr class="featurette-divider">
--->
       <!-- /END THE FEATURETTES -->
 
 
