added picture of me with boyscouts to puzzle figure

--- a/outreach.html
+++ b/outreach.html
@@ -214,7 +214,7 @@
       <hr class="featurette-divider"> 
 
       <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/outreach_puzzle.png">
+        <img class="featurette-image pull-left" src="assets/img/outreach_puzzle.jpg">
         <h2 class="featurette-heading">Pangaea puzzle</h2>
         <p class="lead">The plates have moved around a lot since 250 million years ago when the supercontinent Pangaea started to break up. This puzzle includes all the major continental plates in the southern hemisphere. Using the shapes of the continents and evidence from land-dwelling fossils whose ranges cover multiple continents, students put together the pieces to recreate Pangaea. Puzzle materials can be found <a href="http://volcanoes.usgs.gov/about/edu/dynamicplanet/wegener/">here</a>. A great movie to show after the students finish, titled "Continental drift", can be found <a href="http://www.tectonics.caltech.edu/outreach/animations/index.html">here</a>.  </p>
       </div>
