added subscripts for chemical formulas and superscripts for d34S

--- a/metabolism.html
+++ b/metabolism.html
@@ -216,7 +216,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/metabolism_problem.png">
         <h2 class="featurette-heading">The problem</h2>
-        <p class="lead">Sulfate-reducing bacteria live in the sediments at the bottom of the ocean, take up sulfate from seawater, and reduce it to sulfide. When given the chance, they preferentially take up lighter isotopes of sulfur, generating a difference in the isotopic composition (δ34S) of sulfate and sulfide. Environmental conditions, such as availability of sulfate and food, temperature, or oxygen concentrations, can affect the bacteria's ability to express this preference for lighter isotopes. The δ34S of sulfate and the δ34S of sulfide, which are therefore functions of environmental conditions, are stored in sulfur minerals and can be measured billions of years later. However, before we can interpret this record in terms of environmental conditions, we must have an accurate model of the bacterial sulfate reduction metabolism, so we can predict how different environmental conditions in the past would have affected the difference in δ34S between sulfate and sulfide. </p>
+        <p class="lead">Sulfate-reducing bacteria live in the sediments at the bottom of the ocean, take up sulfate from seawater, and reduce it to sulfide. When given the chance, they preferentially take up lighter isotopes of sulfur, generating a difference in the isotopic composition (δ<sup>34</sup>S) of sulfate and sulfide. Environmental conditions, such as availability of sulfate and food, temperature, or oxygen concentrations, can affect the bacteria's ability to express this preference for lighter isotopes. The δ<sup>34</sup>S of sulfate and the δ<sup>34</sup>S of sulfide, which are therefore functions of environmental conditions, are stored in sulfur minerals and can be measured billions of years later. However, before we can interpret this record in terms of environmental conditions, we must have an accurate model of the bacterial sulfate reduction metabolism, so we can predict how different environmental conditions in the past would have affected the difference in δ<sup>34</sup>S between sulfate and sulfide. </p>
       </div>
 
       <hr class="featurette-divider"> 
@@ -224,7 +224,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/metabolism_rees.png">
         <h2 class="featurette-heading">The standard model</h2>
-        <p class="lead">In the standard model of the sulfate reduction metabolism, sulfate is brought into the cell, activated, and reduced to sulfite (SO3). Importantly, the sulfite is then reduced directly to sulfide. We do not know how strongly this last step in the reduction discriminates against heavy isotopes of sulfur, or what fraction of the sulfite is re-oxidized to sulfate. To determine these unknowns, I grew pure cultures of sulfate-reducing bacteria with sulfite as the sulfur source instead of sulfate. </p>
+        <p class="lead">In the standard model of the sulfate reduction metabolism, sulfate is brought into the cell, activated, and reduced to sulfite (SO<sub>3</sub>). Importantly, the sulfite is then reduced directly to sulfide. We do not know how strongly this last step in the reduction discriminates against heavy isotopes of sulfur, or what fraction of the sulfite is re-oxidized to sulfate. To determine these unknowns, I grew pure cultures of sulfate-reducing bacteria with sulfite as the sulfur source instead of sulfate. </p>
       </div>
 
       <hr class="featurette-divider">
@@ -232,7 +232,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/metabolism_unexpected.png">
         <h2 class="featurette-heading">Unexpected byproduct</h2>
-        <p class="lead">In the cultures grown with sulfite, an intermediate sulfur species appeared in the media, in addition to the expected sulfide. This intermediate species was thiosulfate (S2O3), which contains one sulfur atom with a +4 oxidation state and one zero-valent sulfur atom. The thiosulfate could have been formed by abiotic chemical reactions in the media, or by the bacteria as a metabolic intermediate. To tell the difference between these two mechanisms of formation, I delevoped a new extraction protocol to separately measure the isotopic composition of the two individual sulfur atoms in thiosulfate.  </p>
+        <p class="lead">In the cultures grown with sulfite, an intermediate sulfur species appeared in the media, in addition to the expected sulfide. This intermediate species was thiosulfate (S<sub>2</sub>O<sub>3</sub>), which contains one sulfur atom with a +4 oxidation state and one zero-valent sulfur atom. The thiosulfate could have been formed by abiotic chemical reactions in the media, or by the bacteria as a metabolic intermediate. To tell the difference between these two mechanisms of formation, I delevoped a new extraction protocol to separately measure the isotopic composition of the two individual sulfur atoms in thiosulfate.  </p>
       </div>
 
       <hr class="featurette-divider">
@@ -240,7 +240,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/metabolism_isotopes.png">
         <h2 class="featurette-heading">Isotope results</h2>
-        <p class="lead">The δ34S of sulfite and sulfide are as expected, with the sulfide slightly depleted in heavy isotopes compared to the starting material, sulfite. As the figure demonstrates, the two sulfur atoms in thiosulfate have dramatically different δ34S. This means that the thiosulfate must have been formed by the bacteria as a metabolic intermediate, because abiotic reactions are not known to be capable of producing such a large difference in δ34S. </p>
+        <p class="lead">The δ<sup>34</sup>S of sulfite and sulfide are as expected, with the sulfide slightly depleted in heavy isotopes compared to the starting material, sulfite. As the figure demonstrates, the two sulfur atoms in thiosulfate have dramatically different δ<sup>34</sup>S. This means that the thiosulfate must have been formed by the bacteria as a metabolic intermediate, because abiotic reactions are not known to be capable of producing such a large difference in δ<sup>34</sup>S. </p>
       </div>
 
       <hr class="featurette-divider">
