changed delta font to times new roman

--- a/climate.html
+++ b/climate.html
@@ -216,7 +216,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/zachos.jpg">
         <h2 class="featurette-heading">The problem</h2>
-        <p class="lead">Many scientific studies have used the oxygen isotopic composition, δ<sup>18</sup>O, of fossils as a proxy for ocean temperatures in the past. However, when large ice sheets form near the poles, they change the δ<sup>18</sup>O of the ocean, making this temperature proxy unreliable. In this figure, the δ<sup>18</sup>O proxy suggests that the temperature of the modern ocean is less than freezing, which is not the case. To accurately measure past ocean temperatures, we need a better proxy. </p>
+        <p class="lead">Many scientific studies have used the oxygen isotopic composition, <font face="Times New Roman">δ</font><sup>18</sup>O, of fossils as a proxy for ocean temperatures in the past. However, when large ice sheets form near the poles, they change the δ<sup>18</sup>O of the ocean, making this temperature proxy unreliable. In this figure, the δ<sup>18</sup>O proxy suggests that the temperature of the modern ocean is less than freezing, which is not the case. To accurately measure past ocean temperatures, we need a better proxy. </p>
       </div>
 
       <hr class="featurette-divider"> 
