repeated font change for al deltas

--- a/climate.html
+++ b/climate.html
@@ -216,7 +216,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/zachos.jpg">
         <h2 class="featurette-heading">The problem</h2>
-        <p class="lead">Many scientific studies have used the oxygen isotopic composition, <font face="Times New Roman">δ</font><sup>18</sup>O, of fossils as a proxy for ocean temperatures in the past. However, when large ice sheets form near the poles, they change the δ<sup>18</sup>O of the ocean, making this temperature proxy unreliable. In this figure, the δ<sup>18</sup>O proxy suggests that the temperature of the modern ocean is less than freezing, which is not the case. To accurately measure past ocean temperatures, we need a better proxy. </p>
+        <p class="lead">Many scientific studies have used the oxygen isotopic composition, <font face="Times New Roman">δ</font><sup>18</sup>O, of fossils as a proxy for ocean temperatures in the past. However, when large ice sheets form near the poles, they change the <font face="Times New Roman">δ</font><sup>18</sup>O of the ocean, making this temperature proxy unreliable. In this figure, the <font face="Times New Roman">δ</font><sup>18</sup>O proxy suggests that the temperature of the modern ocean is less than freezing, which is not the case. To accurately measure past ocean temperatures, we need a better proxy. </p>
       </div>
 
       <hr class="featurette-divider"> 
@@ -224,7 +224,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/methods.jpg">
         <h2 class="featurette-heading">Methods</h2>
-        <p class="lead">Carbonate clumped isotope thermometry provides a temperature that is independent of the δ<sup>18</sup>O of the ocean. This means that carbonate clumped isotopes are a much more reliable proxy than the δ<sup>18</sup>O of carbonate. Temperature affects the thermodynamic equilibrium between carbonate ions with only one heavy isotope and carbonate ions with a "clump" of two heavy isotopes. This equilibrium is recorded by shelly animals living in the ocean, which can then be fossilized. To measure the clumped isotope composition of a fossil, I dissolved it in phosphoric acid to release carbon dioxide, and then measured the isotopes of this gas using a mass spectrometer. </p>
+        <p class="lead">Carbonate clumped isotope thermometry provides a temperature that is independent of the <font face="Times New Roman">δ</font><sup>18</sup>O of the ocean. This means that carbonate clumped isotopes are a much more reliable proxy than the <font face="Times New Roman">δ</font><sup>18</sup>O of carbonate. Temperature affects the thermodynamic equilibrium between carbonate ions with only one heavy isotope and carbonate ions with a "clump" of two heavy isotopes. This equilibrium is recorded by shelly animals living in the ocean, which can then be fossilized. To measure the clumped isotope composition of a fossil, I dissolved it in phosphoric acid to release carbon dioxide, and then measured the isotopes of this gas using a mass spectrometer. </p>
       </div>
 
       <hr class="featurette-divider">
@@ -232,7 +232,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/samples.jpg">
         <h2 class="featurette-heading">Samples</h2>
-        <p class="lead">433 million years ago, the global oceans underwent a severe perturbation. We know this because many animals went extinct, and the δ<sup>13</sup>C of marine carbonates shifted sharply, suggesting a large change in the availability of phytoplankton (an important part of the marine food chain). I used clumped isotopes to investigate whether this perturbation was caused by rapid climate change. I measured the clumped isotope composition of marine organisms that were living 433 million years ago at the edge of a tropical sea. The organisms were buried in the mud and fossilized, and then collected from cliffs on the island of Gotland, Sweden. </p>
+        <p class="lead">433 million years ago, the global oceans underwent a severe perturbation. We know this because many animals went extinct, and the <font face="Times New Roman">δ</font><sup>13</sup>C of marine carbonates shifted sharply, suggesting a large change in the availability of phytoplankton (an important part of the marine food chain). I used clumped isotopes to investigate whether this perturbation was caused by rapid climate change. I measured the clumped isotope composition of marine organisms that were living 433 million years ago at the edge of a tropical sea. The organisms were buried in the mud and fossilized, and then collected from cliffs on the island of Gotland, Sweden. </p>
       </div>
 
       <hr class="featurette-divider">
@@ -248,7 +248,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/results.jpg">
         <h2 class="featurette-heading">Results</h2>
-        <p class="lead">Clumped isotope results confirmed that there is a large range in preservation quality among the samples. Hotter samples tend to have higher δ<sup>18</sup>O, suggesting that they were recrystallized deep underground, which erased the record of ocean temperature and instead recorded the temperature of hot hydrothermal fluids. The most pristine sample has a temperature of 30°C, similar to modern tropical oceans. Because so many samples were poorly preserved, I was not able to test for a change in temperature during the global marine ecosystem perturbation, so the cause of this phenomenon remains a mystery. </p>
+        <p class="lead">Clumped isotope results confirmed that there is a large range in preservation quality among the samples. Hotter samples tend to have higher <font face="Times New Roman"></font><sup>18</sup>O, suggesting that they were recrystallized deep underground, which erased the record of ocean temperature and instead recorded the temperature of hot hydrothermal fluids. The most pristine sample has a temperature of 30°C, similar to modern tropical oceans. Because so many samples were poorly preserved, I was not able to test for a change in temperature during the global marine ecosystem perturbation, so the cause of this phenomenon remains a mystery. </p>
       </div>
 
       <hr class="featurette-divider">
