added delta i delted accidentally

--- a/climate.html
+++ b/climate.html
@@ -248,7 +248,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/results.jpg">
         <h2 class="featurette-heading">Results</h2>
-        <p class="lead">Clumped isotope results confirmed that there is a large range in preservation quality among the samples. Hotter samples tend to have higher <font face="Times New Roman"></font><sup>18</sup>O, suggesting that they were recrystallized deep underground, which erased the record of ocean temperature and instead recorded the temperature of hot hydrothermal fluids. The most pristine sample has a temperature of 30°C, similar to modern tropical oceans. Because so many samples were poorly preserved, I was not able to test for a change in temperature during the global marine ecosystem perturbation, so the cause of this phenomenon remains a mystery. </p>
+        <p class="lead">Clumped isotope results confirmed that there is a large range in preservation quality among the samples. Hotter samples tend to have higher <font face="Times New Roman">δ</font><sup>18</sup>O, suggesting that they were recrystallized deep underground, which erased the record of ocean temperature and instead recorded the temperature of hot hydrothermal fluids. The most pristine sample has a temperature of 30°C, similar to modern tropical oceans. Because so many samples were poorly preserved, I was not able to test for a change in temperature during the global marine ecosystem perturbation, so the cause of this phenomenon remains a mystery. </p>
       </div>
 
       <hr class="featurette-divider">
