changed delta font to times new roman

--- a/methane.html
+++ b/methane.html
@@ -206,7 +206,7 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
 	<h1>Methane-oxidizing microbial consortia</h1>
-        <p class="lead">Huge amounts of methane, a potent greenhouse gas, are prevented from reaching the atmosphere by the action of microbial consortia living in ocean sediments. The symbiotic relationship between the two microbial partners in these consortia, which probably involves the exchange of metabolites between partners, is poorly understood. I tested for a relationship between carbon metabolism and the hydrogen isotopic composition (δD) of lipids in one of the microbial partners, which could shed light on the nature of the metabolites exchanged between the partners.</p>
+        <p class="lead">Huge amounts of methane, a potent greenhouse gas, are prevented from reaching the atmosphere by the action of microbial consortia living in ocean sediments. The symbiotic relationship between the two microbial partners in these consortia, which probably involves the exchange of metabolites between partners, is poorly understood. I tested for a relationship between carbon metabolism and the hydrogen isotopic composition (<font face="Times New Roman">δ</font>D) of lipids in one of the microbial partners, which could shed light on the nature of the metabolites exchanged between the partners.</p>
       </div>
 
       <!-- START THE FEATURETTES -->
@@ -224,7 +224,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/methane_zhang.png">
         <h2 class="featurette-heading">A potential solution</h2>
-        <p class="lead">Lipids are molecules that make up the membrane around bacterial cells. Bacteria make lipids by transferring hydrogen atoms from the food they eat to an intermediate molecule, NAD(P)H, and finally to the building blocks that make up the lipids. In some species of bacteria, the hydrogen isotopic composition (δD) of lipids has been shown to reflect the type of food they eat. Results from one previous experiment with the species C. necator are shown in the figure; the colored bars representing the three different food sources have clearly different values. I tested a pure culture of SRB, closely related to the partner SRB in the methane-consuming consortia, for a similar relationship between their food source and the δD of their lipids. </p>
+        <p class="lead">Lipids are molecules that make up the membrane around bacterial cells. Bacteria make lipids by transferring hydrogen atoms from the food they eat to an intermediate molecule, NAD(P)H, and finally to the building blocks that make up the lipids. In some species of bacteria, the hydrogen isotopic composition (<font face="Times New Roman">δ</font>D) of lipids has been shown to reflect the type of food they eat. Results from one previous experiment with the species C. necator are shown in the figure; the colored bars representing the three different food sources have clearly different values. I tested a pure culture of SRB, closely related to the partner SRB in the methane-consuming consortia, for a similar relationship between their food source and the <font face="Times New Roman">δ</font>D of their lipids. </p>
       </div>
 
       <hr class="featurette-divider">
@@ -232,7 +232,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/methane_methods.png">
         <h2 class="featurette-heading">Methods</h2>
-        <p class="lead">Sulfate-reducing bacteria die if they are exposed to oxygen, so I grew the SRB in airtight bottles flushed with pure nitrogen to get rid of all the oxygen. I tracked the growth of the SRB by staining and counting cells under a microscope. When the culture was growing well, I extracted the lipids and characterized their structures using a mass spectrometer. I then used a different mass spectrometer to measure the δD of lipids that are uniquely made by SRB. </p>
+        <p class="lead">Sulfate-reducing bacteria die if they are exposed to oxygen, so I grew the SRB in airtight bottles flushed with pure nitrogen to get rid of all the oxygen. I tracked the growth of the SRB by staining and counting cells under a microscope. When the culture was growing well, I extracted the lipids and characterized their structures using a mass spectrometer. I then used a different mass spectrometer to measure the <font face="Times New Roman">δ</font>D of lipids that are uniquely made by SRB. </p>
       </div>
 
       <hr class="featurette-divider">
@@ -240,7 +240,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/methane_results.png">
         <h2 class="featurette-heading">Results</h2>
-        <p class="lead">The δD of the three lipid structures tested was very similar for all three of the food sources I used. Compared to the results from the species C. necator, the δD is essentially constant and independent of the food source in SRB. These results suggest that the δD of lipids made by the SRB partners in the methane-oxidizing consortia will not be diagnostic of the food source of the SRB partners, and therefore will not shed light onto the metabolites passed between the two symbiotic partners. To unravel the inner workings of this crucial symbiosis, a different method will need to be developed. </p>
+        <p class="lead">The <font face="Times New Roman">δ</font>D of the three lipid structures tested was very similar for all three of the food sources I used. Compared to the results from the species C. necator, the <font face="Times New Roman">δ</font>D is essentially constant and independent of the food source in SRB. These results suggest that the <font face="Times New Roman">δ</font>D of lipids made by the SRB partners in the methane-oxidizing consortia will not be diagnostic of the food source of the SRB partners, and therefore will not shed light onto the metabolites passed between the two symbiotic partners. To unravel the inner workings of this crucial symbiosis, a different method will need to be developed. </p>
       </div>
 
       <hr class="featurette-divider">
@@ -248,7 +248,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/methane_model.jpg">
         <h2 class="featurette-heading">A new metabolic model</h2>
-        <p class="lead">Although my results did not address my original question, their implications for the metabolism of SRB are still interesting. I presented a new metabolic model to explain my results. In this model, SRB have an large number of NAD(P)H molecules inside their cells, which collectively act as carriers of hydrogen atoms from food to the lipids. Because there are many NAD(P)H molecules, the turnover of the NAD(P)H is not very fast, leaving time for the δD of the NAD(P)H to equilibrate with the water inside of the cell. This equilibration would erase any differences in δD caused by different food sources, explaining the observed constant δD across the three tested food sources. </p>
+        <p class="lead">Although my results did not address my original question, their implications for the metabolism of SRB are still interesting. I presented a new metabolic model to explain my results. In this model, SRB have an large number of NAD(P)H molecules inside their cells, which collectively act as carriers of hydrogen atoms from food to the lipids. Because there are many NAD(P)H molecules, the turnover of the NAD(P)H is not very fast, leaving time for the <font face="Times New Roman">δ</font>D of the NAD(P)H to equilibrate with the water inside of the cell. This equilibration would erase any differences in <font face="Times New Roman">δ</font>D caused by different food sources, explaining the observed constant <font face="Times New Roman">δ</font>D across the three tested food sources. </p>
       </div>
 
       <hr class="featurette-divider">
